[package]
name = "lunar-gateway"
version = "0.1.0"
edition = "2021"
description = "Stateless edge gateway for LunarAST ecosystem data distribution"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
